qa/sonarqube/DeploymentConfig.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","metadata":{"annotations":{},"labels":{"app":"br-common-qa-sonarqube"},"name":"br-common-qa-sonarqube","namespace":"br-common-qa"},"spec":{"replicas":1,"revisionHistoryLimit":10,"selector":{"app":"br-common-qa-sonarqube","deploymentconfig":"br-common-qa-sonarqube"},"strategy":{"activeDeadlineSeconds":21600,"resources":{},"rollingParams":{"intervalSeconds":1,"maxSurge":"25%","maxUnavailable":"25%","timeoutSeconds":600,"updateP [...]
    creationTimestamp: "2022-08-24T00:09:06Z"
    generation: 2
    labels:
      app: br-common-qa-sonarqube
    name: br-common-qa-sonarqube
    namespace: br-common-qa
    resourceVersion: "1167629709"
    uid: 4f56760a-50b0-4b41-901a-a4c4805d5730
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: br-common-qa-sonarqube
      deploymentconfig: br-common-qa-sonarqube
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: br-common-qa-sonarqube
          deploymentconfig: br-common-qa-sonarqube
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/br-common-qa/sonarqube:1
          imagePullPolicy: Always
          name: br-common-qa-sonarqube
          ports:
          - containerPort: 9000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2022-08-24T00:17:00Z"
      lastUpdateTime: "2022-08-24T00:17:02Z"
      message: replication controller "br-common-qa-sonarqube-2" successfully rolled
        out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2023-01-16T10:55:03Z"
      lastUpdateTime: "2023-01-16T10:55:03Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 2
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
