qa/sonarqube/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: br-common-qa
  labels:
    app: sonarqube
spec:
  type: ClusterIP
  ports:
    - name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
