qa/sonarqube/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: br-common-qa-sonarqube
  namespace: br-common-qa
  labels:
    app: sonarqube
  name: sonarqube
spec:
  host: br-common-qa-sonarqube-br-common-qa.apps.brocp.openshift.br.com.br
  to:
    kind: Service
    name: sonarqube
    weight: 100
  port:
    targetPort: 9000
  tls:
    termination: edge
  wildcardPolicy: None
